# github-ops-a2a-agent

./: .gitignore  pyproject.toml
src/: __main__.py  auth_middleware.py  github_agent.py  github_agent_executor.py  test_client.py
src/util/: github_util.py  parse_env.py
